# xrpl-tag-streamer

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.sh
.github/workflows/: docker-build.yml
docs/: maker_order.md  order_management_flow.md  taker_trade.md  transfer_funds.md
src/: __init__.py  collector.py  config.py  data_types.py  main.py  mongo_client.py  trading_config.py
src/db/: __init__.py  database.py
src/streaming/: __init__.py  historical.py  streamer.py
src/utils/: __init__.py  logger.py  transaction_processor.py  transaction_utils.py
