[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xrpl-tag-streamer"
version = "0.1.0"
description = "Stream XRPL transactions and filter for specific tags"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "XRPL Tag Streamer Project" }
]
dependencies = [
    "xrpl-py>=2.0.0",
    "duckdb>=0.9.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 